@@ -1,2 +1,2 @@
 
-1.0.4
+1.0.5
