@@ -1,3 +1,8 @@
+out-of-office (1.0.5)
+  * Fix Thunderbird 24 compatibility (https://developer.mozilla.org/en-US/docs/Thunderbird/Releases/24)
+  * Fix bug on SieveAccounts and nsIMsgIncomingServer: cf https://bugzilla.mozilla.org/show_bug.cgi?id=820377
+-- Oct 21 2013
+
 out-of-office (1.0.4)
   * Fix bug on SASL LOGIN (authentication error)
   * Clean code on requests/responses
